# locust-operator

./: .gitignore  .pre-commit-config.yaml  Containerfile  README.md  noxfile.py  pyproject.toml  requirements.txt
locust_operator/: __main__.py  controller.py  helpers.py  logs.py  service.py  worker.py
locust_operator/models/: __init__.py
locust_operator/templates/: deployment.yaml  service.yaml
locust_sample_image/: Containerfile  README.md  locustfile.py
manifests/: deployment.yaml  locust.yaml  rbac.yaml
samples/: basic.yaml  echoserver.yaml
