[tool.poetry]
name = "locust-operator"
version = "0.1.0"
description = ""
authors = ["Jim Fitzpatrick <jfitzpat@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kopf = "^1.37.2"
kubernetes = "^29.0.0"
pydantic = "^2.7.4"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
nox = "^2024.4.15"
locust = "^2.29.1"

[tool.poetry.scripts]
locust-controller = "locust_operator.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
profile = "black"

[tool.bandit]
assert_used.skips = ['*_test.py', '*/test_*.py']